fix orientation on tablet

--- a/wp-content/litespeed/css/styles.css
+++ b/wp-content/litespeed/css/styles.css
@@ -240,7 +240,7 @@ th, td {
 @media screen and (min-width: 500px) and (max-width: 768px) {
     /* Correct ad positioning on tablet */
     .sylvester-top, .sylvester-top-mobile {
-        margin-top: 10rem !important;
+        margin-top: 0rem !important;
     }
 }
 
